// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Regular 1`] = `
.c0 {
  font-size: 22px;
  font-weight: 100;
}

<h3
  className="c0"
/>
`;

exports[`Text Small 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 100;
}

<h3
  className="c0"
/>
`;
